--- a/about-me/index.html
+++ b/about-me/index.html
@@ -45,7 +45,7 @@
   <img src="/images/about-me/photo.jpg" alt="My Photo" class="about-me-photo">
 </div>
 <h2 id="about-me"><strong>About Me</strong></h2>
-<p><em>Your descriptions here.</em></p>
+<p><em>I bring together cutting-edge AI tools with the extensive knowledge I&rsquo;ve gained from over three years of studying well-known cybersecurity courses and practicing through 120 real-world, hands-on labs on platforms like INE, TryHackMe, and VulnHub. Staying updated on cybersecurity news and new vulnerabilities is a priority for me; I follow leading industry professionals and use software alerts to notify me whenever a new issue is identified in any technology I monitor.</em></p>
 <h2 id="certifications"><strong>Certifications</strong></h2>
 <div class="certifications">
   <img src="/images/about-me/eCPPTv3.jpg" alt="Certification One">
