--- a/are-you-a-hr/index.html
+++ b/are-you-a-hr/index.html
@@ -27,7 +27,7 @@
   
 <div class="content">
   <div class="about-me-section">
-  <img src="/images/about-me/photo.JPG" alt="My Photo" class="about-me-photo">
+  <img src="/images/about-me/photo.jpg" alt="My Photo" class="about-me-photo">
   <div class="about-me-text">
     <h2>Name: Bavly Nady</h2>
     <p><strong>Age:</strong> 20</p>
@@ -40,16 +40,18 @@
 <p><em>I bring together cutting-edge AI tools with the extensive knowledge I&rsquo;ve gained from over three years of studying well-known cybersecurity courses and practicing through 120 real-world, hands-on labs on platforms like INE, TryHackMe, and VulnHub. Staying updated on cybersecurity news and new vulnerabilities is a priority for me; I follow leading industry professionals and use software alerts to notify me whenever a new issue is identified in any technology I monitor.</em></p>
 <h2 id="experience"><strong>Experience</strong></h2>
 <ol>
-<li><strong>INE</strong>
+<li>
+<p><strong>Penetration testing student</strong> INE (3/1/2023 - 3/12026)</p>
 <ul>
-<li>Detail 1</li>
-<li>Detail 2</li>
+<li>Studying learning paths like eJPTv2,eWPTv2 and eCPPTv3.</li>
+<li>Studying courses like Azure Pentesting and Active Directory top 10 security missconfigurations.</li>
+<li>Developing team leadership skills by leading a group of 19 students for the enterprise subscription.</li>
 </ul>
 </li>
-<li><strong>Experience Title 2</strong>
+<li>
+<p><strong>Cybersecurity Specialist Intern</strong> upturnplus (11/1/2024-11/30/2024)</p>
 <ul>
-<li>Detail 1</li>
-<li>Detail 2</li>
+<li>Doing vulnerability assessments with Nessus.</li>
 </ul>
 </li>
 </ol>
@@ -97,36 +99,27 @@
 <h2 id="my-studying-agenda"><strong>My Studying Agenda</strong></h2>
 <ol>
 <li>
-<p><strong>Course 1 (Now - 20 Nov)</strong></p>
+<p><strong>OSEP (Now - 31 Dec)</strong></p>
 <ul>
-<li>Point one I am learning in course 1.</li>
-<li>Point two.</li>
+<li>Studying advanced techniques for Active Directory penetration testing.</li>
+<li>Studying client-side attacks with JavaScript and advanced techniques with Microsoft Office.</li>
+<li>Studying antivirus evasion techniques.</li>
+<li>Studying advanced techniques for privilege escalation.</li>
 </ul>
 </li>
 <li>
-<p><strong>Course 2 (Now - 15 Dec)</strong></p>
+<p><strong>Evilginx Mastry BootCamp (2 Jan - 15 Jan)</strong></p>
 <ul>
-<li>Point one I am learning in course 2.</li>
-<li>Point two.</li>
+<li>Understanding Evilginx structure.</li>
+<li>Studying Social Engineering with Evilginx.</li>
 </ul>
 </li>
 <li>
-<p><strong>Course 3 (Now - 30 Nov)</strong></p>
-<ul>
-<li>Point one I am learning in course 3.</li>
-<li>Point two.</li>
-</ul>
-</li>
-<li>
-<p><strong>Course 4 (Now - 10 Jan)</strong></p>
-<ul>
-<li>Point one I am learning in course 4.</li>
-<li>Point two.</li>
-</ul>
+<p><strong>OSWE (17 Jan - 6 Feb)</strong></p>
 </li>
 </ol>
 <h2 id="download-my-cv"><strong>Download My CV</strong></h2>
-<p><a href="https://google.com">Download my CV</a> (It is updated every 4 months; latest update: 29/10/2024)</p>
+<p><a href="https://drive.google.com/drive/folders/1rNi2PswRhPctJmpzXxFwQcmkw3vrLaPb">Download my CV</a> (It is updated every 4 months; latest update: 29/10/2024)</p>
 <h2 id="contact-me"><strong>Contact Me</strong></h2>
 <ul>
 <li><strong>Email:</strong> <em><a href="mailto:Bavlynady21@gmail.com">Bavlynady21@gmail.com</a></em></li>
