--- a/certifications/index.html
+++ b/certifications/index.html
@@ -41,12 +41,16 @@
   <!-- Add more certificates as needed -->
   <!-- Example placeholders -->
   <div class="certificate-item">
-    <img src="/images/about-me/cert3.jpg" alt="Certification Three">
-    <h3>Certification Three</h3>
+    <img src="/images/about-me/wireless.jpg" alt="Certification Three">
+    <h3>Wireless Networks Penetration Testing</h3>
   </div>
   <div class="certificate-item">
-    <img src="/images/about-me/cert4.jpg" alt="Certification Four">
-    <h3>Certification Four</h3>
+    <img src="/images/about-me/networkfund.jpg" alt="Certification Four">
+    <h3>Computer Network Fundamentals</h3>
+  </div>
+    <div class="certificate-item">
+    <img src="/images/about-me/ielts.jpg" alt="Certification Four">
+    <h3>IELTS General</h3>
   </div>
 </div>
 
