--- a/are-you-a-hr/index.html
+++ b/are-you-a-hr/index.html
@@ -27,7 +27,7 @@
   
 <div class="content">
   <div class="about-me-section">
-  <img src="/images/about-me/photo.jpg" alt="My Photo" class="about-me-photo">
+  <img src="photo.jpg" alt="My Photo" class="about-me-photo">
   <div class="about-me-text">
     <h2>Name: Bavly Nady</h2>
     <p><strong>Age:</strong> 20</p>
