--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   
   <div class="profile-section">
     <div class="profile-left">
-      <img class="profile-pic2" src="/images/about-me/photo2.jpg" alt="Bavly Nady">
+      <img class="profile-pic2" src="photo2.jpg" alt="Bavly Nady">
     </div>
     <div class="profile-right">
       <h2>About Me</h2>
